--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
 
             // Send data using the Fetch API (AJAX)
-            fetch('https://valantainfinder.netlify.app/.netlify/functions/api/submit', {
+            fetch('https://valantainfinder.netlify.app/.netlify/functions/submit', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
@@ -377,7 +377,7 @@
 
 
             // Send data using the Fetch API (AJAX)
-            fetch('https://valantainfinder.netlify.app/.netlify/functions/api/share', {
+            fetch('https://valantainfinder.netlify.app/.netlify/functions/share', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
