--- a/public/index.html
+++ b/public/index.html
@@ -347,7 +347,7 @@
 
 
             // Send data using the Fetch API (AJAX)
-            fetch('https://valantainfinder.netlify.app/.netlify/functions/api/submit', {
+            fetch('https://valantainfinder.netlify.app/.netlify/functions/submit', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
@@ -377,7 +377,7 @@
 
 
             // Send data using the Fetch API (AJAX)
-            fetch('https://valantainfinder.netlify.app/.netlify/functions/api/share', {
+            fetch('https://valantainfinder.netlify.app/.netlify/functions/share', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
@@ -475,7 +475,7 @@
 
         function fetchDistinctHashes() {
             const userName = localStorage.getItem("userName");
-            fetch(`/api/distinct-hashes?userName=${userName}`)
+            fetch(`/.netlify/functions/distinct-hashes=${userName}`)
                 .then(response => response.json())
                 .then(data => {
                     const hashesContainer = document.getElementById("hashes-container");
