--- a/public/index.html
+++ b/public/index.html
@@ -475,7 +475,7 @@
 
         function fetchDistinctHashes() {
             const userName = localStorage.getItem("userName");
-            fetch(`/.netlify/functions/distinct-hashes=${userName}`)
+            fetch(`/.netlify/functions/distinct-hashes?userName=${userName}`)
                 .then(response => response.json())
                 .then(data => {
                     const hashesContainer = document.getElementById("hashes-container");
