index url corrected

--- a/public/index.html
+++ b/public/index.html
@@ -346,7 +346,7 @@
 
             // CORS proxy URL (using CORS Anywhere for demonstration)
             //var corsProxy = 'https://cors-anywhere.herokuapp.com/';
-            var targetUrl = 'https://valantainfinder.netlify.app/.netlify/functions/submit'; // Replace with your server's URL
+            var targetUrl = 'https://valantinefinder.netlify.app/.netlify/functions/submit'; // Replace with your server's URL
 
             // Send data using the Fetch API (AJAX) through CORS proxy
             fetch(targetUrl, {
@@ -388,7 +388,8 @@
 
 
             // Send data using the Fetch API (AJAX)
-            fetch('https://valantainfinder.netlify.app/.netlify/functions/share', {
+            fetch('https://valantinefinder.netlify.app/.netlify/functions/share', {
+
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
