sshare url corrected

--- a/public/index.html
+++ b/public/index.html
@@ -455,7 +455,7 @@
             var hash = localStorage.getItem("hash");
 
             // Append the name to the share URL
-            const shareUrl = `https://valantainfinder.netlify.app/id/?id=${encodeURIComponent(hash)}`;
+            const shareUrl = `https://valantinefinder.netlify.app/?id=${encodeURIComponent(hash)}`;
 
             if (navigator.share) {
                 navigator.share({
