--- a/public/index.html
+++ b/public/index.html
@@ -246,7 +246,7 @@
     <br />
     <div id="hashes-container">
         <center></center><h3>"Your response will appear here."</h3>
-        <p>The following users have accepted your invitation. These are the IDs from the shared URL.</p>
+                         <p>The following users have accepted your invitation. Here are the IDs from the shared URL.</p>
         <ul id="hashes-list">
             <!-- Distinct hashes will be appended here -->
         </ul></center>
