share user name removed

--- a/public/index.html
+++ b/public/index.html
@@ -460,7 +460,7 @@
             if (navigator.share) {
                 navigator.share({
                     title: "Valentine's Day Request",
-                    text: `Will you be my Valentine? ❤️ - from ${name}`,
+                    text: `Will you be my Valentine? ❤️ - from `,
                     url: shareUrl
                 }).then(() => {
                     console.log("Thanks for sharing!");
