footer link added

--- a/public/index.html
+++ b/public/index.html
@@ -543,7 +543,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>Created by Anand Rajan</p>
+        <p>Created by <a href="https://www.instagram.com/anand_rajan_ponthiyankal?igsh=MW9rbHBvYmh4cHMxNQ%3D%3D&utm_source=qr">Anand Rajan</a></p>
     </footer>
 
 </body>
